--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="part3">
             <div>
                 <aside>
-                <h1>Celeberating 1st Birthay</h1>
+                <h1>celebrating 1st Birthay</h1>
                 <h1>On 13th of janurary 2024</h1>
                 </aside> 
             </div>
